--- a/index.html
+++ b/index.html
@@ -122,21 +122,22 @@
                   if (xhr.status === 200) {
                     var elements = xhr.response.getElementsByTagName("a");
                     for (x of elements) {
-                      if ( x.href.match(/\.(jpe?g|png|gif)$/) ) {
-                          let img = document.querySelector("#image-container").appendChild(document.createElement("img"));
-                          img.src = x.href;
-                          img.className = "image";
-                          let img1 = img.cloneNode(true);
-                          let img2 = img.cloneNode(true);
-                          let img3 = img.cloneNode(true);
-                          img.classList.add("top-crop")
-                          img1.classList.add("right-crop")
-                          img2.classList.add("bottom-crop")
-                          img3.classList.add("left-crop")
-                          document.querySelector("#image-container").appendChild(img);
-                          document.querySelector("#image-container").appendChild(img1);
-                          document.querySelector("#image-container").appendChild(img2);
-                          document.querySelector("#image-container").appendChild(img3);
+                        console.log(x)
+                        if ( x.href.match(/\.(jpe?g|png|gif)$/) ) {
+                            let img = document.querySelector("#image-container").appendChild(document.createElement("img"));
+                            img.src = x.href;
+                            img.className = "image";
+                            let img1 = img.cloneNode(true);
+                            let img2 = img.cloneNode(true);
+                            let img3 = img.cloneNode(true);
+                            img.classList.add("top-crop")
+                            img1.classList.add("right-crop")
+                            img2.classList.add("bottom-crop")
+                            img3.classList.add("left-crop")
+                            document.querySelector("#image-container").appendChild(img);
+                            document.querySelector("#image-container").appendChild(img1);
+                            document.querySelector("#image-container").appendChild(img2);
+                            document.querySelector("#image-container").appendChild(img3);
                       }
                     };
                   }
