--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
     </head>
     <body>
         <h1 class="title">Tile Selector</h1>
-        <div class="popup">
+        <!-- <div class="popup">
             <span onclick="closeFolder()">&times</span>
             <div class="popup-content">
                 <h2></h2>
-                <!-- <p>Tile Description</p> -->
                 <div id="image-container"></div>
             </div>
-        </div>
+        </div> -->
         <div class="content">
             <div class="color-folder">
                 <div class="tile" id="Field_Tile_CPRISB_Dark_Grey__12x12">
-                    <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F01.jpg" class="tile-image image1" alt="">
-                    <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F02.jpg" class="tile-image image2" alt="">
+                    <img src="static/images/9x9_Images/Dark Grey.jpg" class="tile-image" alt="">
+                    <!-- <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F02.jpg" class="tile-image image2" alt="">
                     <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F03.jpg" class="tile-image image3" alt="">
                     <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F04.jpg" class="tile-image image4" alt="">
-                    <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F05.jpg" class="tile-image image5" alt="">
+                    <img src="static/images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F05.jpg" class="tile-image image5" alt=""> -->
                 </div>
                 <span  class="color-name">
                     <label for="Dark_Grey">Dark Grey</label>
@@ -35,11 +34,11 @@
             </div>
             <div class="color-folder">
                 <div class="tile" id="Ironstone_Antique_Slate_12x12">
-                    <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F01.jpg" class="tile-image image1" alt="">
-                    <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F02.jpg" class="tile-image image2" alt="">
+                    <img src="static/images/9x9_Images/Antique Slate.jpg" class="tile-image" alt="">
+                    <!-- <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F02.jpg" class="tile-image image2" alt="">
                     <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F03.jpg" class="tile-image image3" alt="">
                     <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F04.jpg" class="tile-image image4" alt="">
-                    <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F05.jpg" class="tile-image image5" alt="">
+                    <img src="static/images/Ironstone_Antique_Slate_12x12/Ironstone Antique Slate 12x12 F05.jpg" class="tile-image image5" alt=""> -->
                 </div>
                 <span  class="color-name">
                     <label for="Antique_Slate">Antique Slate</label>
@@ -48,11 +47,11 @@
             </div>
             <div class="color-folder">
                 <div class="tile" id="Ironstone_English_Grey_12x12">
-                    <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F01.jpg" class="tile-image image1" alt="">
-                    <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F02.jpg" class="tile-image image2" alt="">
+                    <img src="static/images/9x9_Images/English Grey.jpg" class="tile-image" alt="">
+                    <!-- <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F02.jpg" class="tile-image image2" alt="">
                     <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F03.jpg" class="tile-image image3" alt="">
                     <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F04.jpg" class="tile-image image4" alt="">
-                    <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F05.jpg" class="tile-image image5" alt="">
+                    <img src="static/images/Ironstone_English_Grey_12x12/Ironstone English Grey 12x12 F05.jpg" class="tile-image image5" alt=""> -->
                 </div>
                 <span  class="color-name">
                     <label for="English_Grey">English Grey</label>
@@ -61,11 +60,11 @@
             </div>
             <div class="color-folder">
                 <div class="tile" id="Ironstone_French_Blend">
-                    <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F01.jpg" class="tile-image image1" alt="">
-                    <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F02.jpg" class="tile-image image2" alt="">
+                    <img src="static/images/9x9_Images/French Blend.jpg" class="tile-image" alt="">
+                    <!-- <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F02.jpg" class="tile-image image2" alt="">
                     <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F03.jpg" class="tile-image image3" alt="">
                     <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F04.jpg" class="tile-image image4" alt="">
-                    <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F05.jpg" class="tile-image image5" alt="">
+                    <img src="static/images/Ironstone_French_Blend/Ironstone French Blend F05.jpg" class="tile-image image5" alt=""> -->
                 </div>
                 <span class="color-name">
                     <label for="French_Blend">French Blend</label>
@@ -74,11 +73,11 @@
             </div>
             <div class="color-folder">
                 <div class="tile" id="Sage_Green_12x12">
-                    <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F01.jpg" class="tile-image image1" alt="">
-                    <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F02.jpg" class="tile-image image2" alt="">
+                    <img src="static/images/9x9_Images/Sage Green.jpg" class="tile-image" alt="">
+                    <!-- <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F02.jpg" class="tile-image image2" alt="">
                     <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F03.jpg" class="tile-image image3" alt="">
                     <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F04.jpg" class="tile-image image4" alt="">
-                    <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F05.jpg" class="tile-image image5" alt="">
+                    <img src="static/images/Sage_Green_12x12/Sage Green 12x12 F05.jpg" class="tile-image image5" alt=""> -->
                 </div>
                 <span class="color-name">
                     <label for="Sage_Green">Sage Green</label>
@@ -373,7 +372,7 @@
                     for (let i = 0; i < finalDesignTiles.length; i++) {
                         finalDesignTiles[i].style.backgroundImage = "";
                     }
-                    alert("Please select both colors to generate the final image.")
+                    alert("Please select at least one colors to generate the final image.")
                 }
                 
             }
@@ -386,55 +385,55 @@
                 return array; 
             }; 
 
-            document.querySelectorAll(".tile").forEach(tile => {
-                tile.onclick=()=>{
-                    openFolder(tile)
-                }
-            })
-            function openFolder(tile) {
-                let fld = tile.getAttribute("id")
-                // console.log(tile.parentElement.getElementsByTagName("span")[0].innerHTML);
-                let color = tile.parentElement.getElementsByTagName("span")[0].innerHTML;
-                document.querySelector(".popup-content h2").innerHTML = color;
-                document.querySelector(".popup").style.display = "block";
-                // var folder = "static/images/" + fld + "/";
-                let i = 1;
-                let s =padWithLeadingZeros(i, 2)
-                let n = fld.replaceAll("_"," ") + " F" + s;
-                let file = "static/images/" + fld + "/" + n + ".jpg";
+            // document.querySelectorAll(".tile").forEach(tile => {
+            //     tile.onclick=()=>{
+            //         openFolder(tile)
+            //     }
+            // })
+            // function openFolder(tile) {
+            //     let fld = tile.getAttribute("id")
+            //     // console.log(tile.parentElement.getElementsByTagName("span")[0].innerHTML);
+            //     let color = tile.parentElement.getElementsByTagName("span")[0].innerHTML;
+            //     document.querySelector(".popup-content h2").innerHTML = color;
+            //     document.querySelector(".popup").style.display = "block";
+            //     // var folder = "static/images/" + fld + "/";
+            //     let i = 1;
+            //     let s =padWithLeadingZeros(i, 2)
+            //     let n = fld.replaceAll("_"," ") + " F" + s;
+            //     let file = "static/images/" + fld + "/" + n + ".jpg";
 
-                while (fileExists(file)==true) {
-                    let img = document.querySelector("#image-container").appendChild(document.createElement("img"));
-                    img.src = file;
-                    img.className = "image";
-                    // img.onclick=selectTile();
-                    let img1 = img.cloneNode(true);
-                    let img2 = img.cloneNode(true);
-                    let img3 = img.cloneNode(true);
-                    img.classList.add("top-crop")
-                    img.alt = n + "_top-crop"
-                    img1.classList.add("right-crop")
-                    img1.alt = n + "_right-crop"
-                    img2.classList.add("bottom-crop")
-                    img2.alt = n + "_bottom-crop"
-                    img3.classList.add("left-crop")
-                    img3.alt = n + "_left-crop"
-                    document.querySelector("#image-container").appendChild(img);
-                    document.querySelector("#image-container").appendChild(img1);
-                    document.querySelector("#image-container").appendChild(img2);
-                    document.querySelector("#image-container").appendChild(img3);
-                    i++;
-                    s =padWithLeadingZeros(i, 2)
-                    n = fld.replaceAll("_"," ") + " F" + s;
-                    file = "static/images/" + fld + "/" + n + ".jpg";
-                    img = null;
-                    img1 = null;
-                    img2 = null;
-                    img3 = null;
-                }
+            //     while (fileExists(file)==true) {
+            //         let img = document.querySelector("#image-container").appendChild(document.createElement("img"));
+            //         img.src = file;
+            //         img.className = "image";
+            //         // img.onclick=selectTile();
+            //         let img1 = img.cloneNode(true);
+            //         let img2 = img.cloneNode(true);
+            //         let img3 = img.cloneNode(true);
+            //         img.classList.add("top-crop")
+            //         img.alt = n + "_top-crop"
+            //         img1.classList.add("right-crop")
+            //         img1.alt = n + "_right-crop"
+            //         img2.classList.add("bottom-crop")
+            //         img2.alt = n + "_bottom-crop"
+            //         img3.classList.add("left-crop")
+            //         img3.alt = n + "_left-crop"
+            //         document.querySelector("#image-container").appendChild(img);
+            //         document.querySelector("#image-container").appendChild(img1);
+            //         document.querySelector("#image-container").appendChild(img2);
+            //         document.querySelector("#image-container").appendChild(img3);
+            //         i++;
+            //         s =padWithLeadingZeros(i, 2)
+            //         n = fld.replaceAll("_"," ") + " F" + s;
+            //         file = "static/images/" + fld + "/" + n + ".jpg";
+            //         img = null;
+            //         img1 = null;
+            //         img2 = null;
+            //         img3 = null;
+            //     }
 
                 
-            }
+            // }
             function closeFolder() {
                 document.querySelector("#image-container").innerHTML = "";
                 document.querySelector(".popup").style.display = "none";
@@ -464,10 +463,12 @@
                             selected_tiles[i].parentElement.parentElement.getElementsByClassName("selected-tile-color")[0].innerHTML = chb.value;
                             // selected_tiles[i].classList.add(image.classList[1]);
                             selected_tiles[i].onclick=()=>{
+                                selected_tiles = document.querySelectorAll(".selected-tile-image");
                                 selected_tiles[i].style.backgroundImage = "";
                                 let color = selected_tiles[i].parentElement.parentElement.getElementsByClassName("selected-tile-color")[0].innerHTML;
                                 selected_tiles[i].parentElement.parentElement.getElementsByClassName("selected-tile-color")[0].innerHTML ="&nbsp"
                                 adjustImages(color);
+                                generateFinalImage()
                             }
                             generateFinalImage()
                             break;
